--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Personal
 flask_session/
 .vscode/
+settings.py
 
 # Distribution / packaging
 .Python
@@ -106,13 +107,14 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+*.env
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+bookFox_venv/
 
 # Spyder project settings
 .spyderproject
